syntax = "proto3";

import "units.proto";
import "item_type.proto";

package schema;

message MaybeNullItem {
    Item item = 1;
    bool is_null = 2;
}

message Item {
    core.ItemType type = 1;
    uint64 quantity = 2;
    uint64 id = 3;
}

message ItemObject {
    Item item = 1;
    Point3Float position = 2;
    Point3Float velocity = 3;
}