syntax = "proto3";

package core;

enum TriangleType {
    TypeInvalid = 0;
    DirtTri = 1;
    StoneTri = 2;
    StoneBrickTri = 3;
    Water = 4;
}

enum TriangleSubType
{
    SubInvalid = 0;
    LandActuallyFull = 1; // Optimization to combine 6 full triangles into 1. Doesn't actually live in the datastructure
    LandFull = 2;
    LandInnyLeft = 3;
    LandInnyRight = 4;
    LandInnyBoth = 5;
    LandOuty = 6;
    BrickHalf = 7;
    FullBrick = 8;
    Liquid = 9;
}

enum TerrainObjectType
{
    BirchTree = 0;
    PineTree = 1;
    StrippedBush = 2;
    Bush = 3;
    Mushroom = 4;
}
